--- a/index.html
+++ b/index.html
@@ -1,18 +1,127 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pocket Money Calculator</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-        <h1>Pocket Money Calculator</h1>
-        <div id="calculator">
-            <!-- Calculator content goes here -->
-        </div>
+     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+
+    <!-- Adding Navbar just to give the webpage more authentic look -->
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+  
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact Us</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" aria-disabled="true">About Us</a>
+        </li>
+      </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
     </div>
+  </div>
+</nav>
+
+
+
+<!-- Title of the project -->
+
+    <div class="container">
+      <h1>Pocket Money Calculator</h1>
+      <div id="calculator" class="mb-5">
+
+        <!-- Input fields for product name and its cost -->
+        <div class="mt-5" >
+          <label for="exampleFormControlInput1" class="form-label"
+            >Product</label
+          >
+          <input
+            type="text"
+            class="form-control"
+            id="prodName"
+            placeholder="Cheese, Apple Juice"
+          />
+        </div>
+        <div class="mt-3" >
+          <label for="exampleFormControlTextarea1" class="form-label"
+            >Cost(€)</label
+          >
+          <textarea
+            class="form-control"
+            id="prodCost"
+            rows="1"
+            placeholder="1, 2.3"
+          ></textarea>
+
+        <div  class="mt-3">                                 <!-- Button for Adding to the Table -->
+      <button type="submit" id="add" class="btn btn-primary">
+        Add
+      </button>
+      </div>
+
+        </div>
+
+      </div>
+
+  <!-- Adding table view of Products here -->
+      <div class="table-responsive">
+  <table class="table">
+   <caption class="mt-5">List of Products and their Costs</caption>
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Product Name</th>
+      <th scope="col">Cost(€)</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Cheese</td>
+      <td>1.79</td>
+    </tr>
+   
+  </tbody>
+</table>
+  </table>
+</div>
+    </div>
+
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
